<?xml version="1.0"?>
<package format="2">
    <name>robot_basic_tools</name>
    <version>1.0.0</version>
    <description>The robot_basic_tools package</description>

    <maintainer email="wugx@deepblueai.com">hardjet</maintainer>

    <license>GPLv3</license>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
