<?xml version="1.0"?>
<package format="2">
    <name>robot_basic_tools</name>
    <version>1.0.0</version>
    <description>The robot_basic_tools package</description>

    <maintainer email="wugx@deepblueai.com">hardjet</maintainer>

    <license>GPLv3</license>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <export>
    </export>
</package>
